--- a/src/box/style.css
+++ b/src/box/style.css
@@ -1,3 +1,4 @@
+/*_________1_____________ */
 .div1{
     color: white;
     display: flex;
@@ -17,10 +18,10 @@
     height: 120px;
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
 }
 .div1container1__img img{
-    width: 50px;
+    width: 150px;
 }
 .div1container1__text{
     font-size: 1.5rem;
