--- a/src/box/style.css
+++ b/src/box/style.css
@@ -3,7 +3,6 @@
     color: white;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     gap: 30px;
     padding: 30px 0;
     align-items: center;
@@ -187,6 +186,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .div11container__text{
     font-size: 1rem;
