--- a/src/box/style.css
+++ b/src/box/style.css
@@ -3,7 +3,7 @@
     color: white;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    justify-content: space-between;
     padding: 30px 0;
     align-items: center;
 }
