--- a/src/box/style.css
+++ b/src/box/style.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     padding: 30px 0;
     align-items: center;
+    position: relative;
 }
 .div1container1{
     height: 400px;
@@ -54,6 +55,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .div2container2__img{
     width: 50px;
@@ -74,6 +76,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .div3container__img{
     width: 50px;
@@ -94,6 +97,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .div4container__img{
     width: 50px;
