--- a/src/box/modals/style.css
+++ b/src/box/modals/style.css
@@ -138,6 +138,36 @@
   color: white;
 }
 
+/* _________________9______________ */
+/* Estilos para el modal */
+.modal9-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal9-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+/* Estilos adicionales para el botón de cerrar el modal */
+.close-button9 {
+  cursor: pointer;
+  background-color: #ccc;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  margin-top: 10px;
+}
+
 
 /* ______________11_____________ */
 /* Estilos para el modal */
