--- a/src/box/modals/style.css
+++ b/src/box/modals/style.css
@@ -1,5 +1,18 @@
 /* MODALLES */
 /* _____________1____________ */
+.overlay{ position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  animation: fadeIn 2s ease;
+  
+}
+@keyframes fadeIn {
+  0% { opacity: 0;}
+}
+
 .modal1-content {
   background-color: #6dba4e;
   border-radius: 2px;
@@ -143,7 +156,7 @@
 .modalT-container {
   position: fixed;
     top: 0;
-    left: 200px;
+    /* left: 200px; */
     width: 100%;
     height: 100%;
     display: flex;
@@ -156,12 +169,12 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  width: 50%;
-  height: 70%;
+  width: 50vw;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid black; 
 }
 .imgModalT {
   max-width: 100%;
@@ -236,7 +249,7 @@
   }
 
   .title-modal{
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     color: gray;
     padding: 2% ;
   }
