--- a/src/box/modals/style.css
+++ b/src/box/modals/style.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  animation: fadeIn 1.5s ease;
+  animation: fadeIn 1.4s ease;
   
 }
 @keyframes fadeIn {
@@ -252,4 +252,10 @@
     font-size: 1.2rem;
     color: gray;
     padding: 2% ;
+  }
+  .text-modal{
+    font-size: 1.2rem;
+    color: gray;
+    padding: 10% ;
+    margin-top: 1%;
   }
