--- a/src/box/style.css
+++ b/src/box/style.css
@@ -286,5 +286,8 @@
     font-size: 1rem;
 }
 
-
-  
+@media screen and (max-width: 600px) {
+    .div1container1__img img {
+        width: 110px;
+    }
+  }
