--- a/src/box/modals/style.css
+++ b/src/box/modals/style.css
@@ -35,7 +35,7 @@
   cursor: pointer;
   background-color: black;
   color: white;
-  padding: 6px 13px;
+  padding: 2px 9px;
   border: none;
   border-radius: 50%;
   margin-top: 10px;
@@ -68,10 +68,10 @@
 }
 
 .close-button2 {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   cursor: pointer;
-  padding: 6px 13px;
+  padding: 2px 9px;
   border: none;
   border-radius: 50%;
   font-weight: bold;
@@ -79,8 +79,9 @@
   border: 1px solid black;
 }
 .close-button2:hover {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
 /* _______________3______________ */
 .modal3-content {
@@ -102,10 +103,10 @@
   left: 0;
 }
 .close-button3 {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   cursor: pointer;
-  padding: 6px 13px;
+  padding: 2px 9px;
   border: none;
   border-radius: 50%;
   font-weight: bold;
@@ -113,8 +114,9 @@
   border: 1px solid black;
 }
 .close-button3:hover {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
 /* _______________4______________ */
 .modal4-content {
@@ -136,10 +138,10 @@
   left: 0;
 }
 .close-button4 {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   cursor: pointer;
-  padding: 6px 13px;
+  padding: 2px 9px;
   border: none;
   border-radius: 50%;
   font-weight: bold;
@@ -147,8 +149,9 @@
   border: 1px solid black;
 }
 .close-button4:hover {
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
 
 /* _________________9______________ */
